<resources>
    <string name="app_name">Quidditch Score Keeper</string>
    <string name="gryffindor_wins">Gryffindor Wins!</string>
    <string name="slytherin_wins">Slytherin Wins!</string>
    <string name="gryffindor">Gryffindor</string>
    <string name="zeropoints">0</string>
    <string name="tenpoints">+10 points</string>
    <string name="slytherin">Slytherin</string>
    <string name="new_game">New Game</string>
</resources>
